--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "sass": "^1.32.6",
+    "sass-loader": "^10.1.1",
     "style-loader": "^0.23.0",
-    "webpack": "^4.20.2",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   }
